fixed right margin and leftnav collapse bug

--- a/src/app/modules/hub/hub.component.scss
+++ b/src/app/modules/hub/hub.component.scss
@@ -195,7 +195,7 @@
 
 @media only screen and (min-width: 427px) {
   .hub-container {
-    border-top: 1px solid var(--grayed-border);
+    // border-top: 1px solid var(--grayed-border);
     margin: 0 84px 0 24px;
   }
 
