--- a/src/app/modules/top-header/top-header.component.scss
+++ b/src/app/modules/top-header/top-header.component.scss
@@ -62,7 +62,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
-    margin: 0 7.8em 0 1.5em;
+    margin: 0 2.5em 0 1.5em;
     border-bottom: 1px solid var(--grayed-border);
   }
 
