--- a/src/app/modules/workflows/workflows.component.scss
+++ b/src/app/modules/workflows/workflows.component.scss
@@ -449,7 +449,8 @@
 
   .wave__content {
     flex: 1;
-    max-width: calc(100% - 100px);
+    // max-width: calc(100% - 100px);
+    max-width: calc(100% - 14px);
     margin: 0 0 0 24px;
   }
 
